--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,18 @@ main.full-width {
     height: auto;
 }
 
+h1 {
+    font-size: clamp(1.7rem,7vw,3rem);
+    font-weight: bold;
+    line-height: 1;
+}
+
+h2 {
+    font-size: clamp(1.25rem,5vw,2.1rem);
+    font-weight: normal;
+    line-height: 1.6;
+}
+
 a,
 button {
     color: var(--primary);
@@ -155,8 +167,11 @@ button:focus-visible,
     text-decoration-skip-ink: all;
 }
 
-.flex {
+.flex-center {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .center {
@@ -183,18 +198,6 @@ strong {
 
 .small-text {
     font-size: calc(var(--paragraph) * .9);
-}
-
-h1 {
-    font-size: clamp(1.7rem,7vw,3rem);
-    font-weight: bold;
-    line-height: 1;
-}
-
-h2 {
-    font-size: clamp(1.25rem,5vw,2.1rem);
-    font-weight: normal;
-    line-height: 1.6;
 }
 
 hr {
